--- a/White/public/stylesheet/styleFlexbox.css
+++ b/White/public/stylesheet/styleFlexbox.css
@@ -46,7 +46,7 @@
   max-width: 130vh;
   /* padding: 20px; */
   border-radius: 5px;
-  left: 18vh;
+  left: 12vh;
   padding:2vh;
   top:30vh;
   max-height: 50vh!important;
@@ -79,4 +79,25 @@
   bottom: 30px;
   opacity: 1;
   visibility: visible;
+}
+
+@media screen and (max-width: 600px) {
+  .flexbox-slider .flexbox-slide .text-block {
+    position: absolute;
+    text-align: center;
+    max-width: 130vh;
+    /* padding: 20px; */
+    border-radius: 5px;
+    left: 15vh;
+    padding:2vh;
+    top:13vh;
+    max-height: 90vh!important;
+    background-color: rgba(0, 0, 0, 0.8);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5vh;
+    color: #fff;
+    z-index: 4;
+    /* visibility: hidden; */
+    opacity: 0;
+  }
 }
