--- a/White/public/stylesheet/styleProject.css
+++ b/White/public/stylesheet/styleProject.css
@@ -4,7 +4,7 @@
 # https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-0.3.5&q=50&fm=jpg&crop=entropy&s=61282cfeed75871385c84c2a44a8e594&w=1000
 */
 body {
-  background: #191919!important;
+  background: white!important;
   /* padding: 40px 20p  ; */
   overflow-x: hidden !important;
 }
@@ -16,8 +16,85 @@ body {
 .dropdown-item:hover{
   background-color: grey!important;
 }
+.r0{
+  margin-top: 10vh!important;
+}
+.r1{
 
+}
 
+#i1::before{
+  background-image:url(../images/proj1.jpg)!important;
+  /* background-image: url(/img/background-1932466_1920-320x212.jpg); */
+  background-size: cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.9;
+}
+#i2::before{
+  background-image:url(../images/proj2.jpg);
+  background-size: cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.9;
+}
+#i3::before{
+  background-image:url(../images/proj3.jpg);
+  background-size: cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.9;
+}
+#i4::before{
+  background-image:url(../images/proj4.jpg);
+  background-size: cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.7;
+}
+#i5::before{
+  background-image:url(../images/proj5.jpg);
+  background-size: cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.9;
+}
+#i6::before{
+  background-image:url(../images/proj6.jpg);
+  background-size: cover;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.9;
+
+}
+.item{
+  position: relative;
+  background-position: center;
+  height:40vh!important;
+  margin-top: 2vh!important;
+}
+
+.blockHead{
+  opacity: 1.0!important;
+}
 .dropdown-menu{
   background-color: black!important;
   color: black!important;
@@ -36,44 +113,7 @@ a span{
   color:#FFFFFF !important;
 }
 /* ---------------------------------- */
-.gTop{
-  margin-top: 10vh;
-}
-.gallery {
-  display: flex;
-}
-.bg{
 
-}
-.gallery .item {
-  opacity: 0.8;
-  overflow: hidden;
-  margin: 20px;
-  position: relative;
-  flex: 500px 1 1;
-  transition: all 0.3s ease-in;
-}
-.gallery .item:hover {
-  flex: 1500px 3 3;
-  opacity: 1.8  ;
-}
-.item:hover  .text-block{
-  visibility: visible!important;
-}
-.gallery .item span {
-  background: #333 30% 70% no-repeat;
-  display: block;
-  height: 58vh!important;
-  max-height: 40vh!important;
-}
-/* --------------------- */
-h1{
-  /* width: 50vh!important; */
-  text-outline: 7px black solid!important;
-  text-align: center;
-  position: absolute;
-  margin-top: -40vh!important;
-}
 .blockHead{
   opacity: 1!important;
   /* margin-top: 10vh; */
@@ -84,46 +124,44 @@ h1{
   color: white;
   text-shadow: 5px 5px 5px black;
 }
+
 .text-block {
   position: absolute;
-  text-align: center;
-  width: 100vh;
-  height: 100vh;
-  /* padding: 20px; */
-  border-radius: 5px;
-  padding-left: 5vh;
-  padding-right: 5vh;
-  /* padding:2vh; */
-  top:12vh;
+  bottom: 0;
   /* max-height: 50vh!important; */
   background-color: rgba(0, 0, 0, 0.92);
   font-family: 'Montserrat', sans-serif;
-  font-size: 2.5vh;
+  font-size: 2.3vh;
   color: #fff;
   z-index: 4;
+  height:60%;
+  width: 100%;
   /* visibility: hidden; */
-  opacity: 0;
+  opacity: 1;
+  float:
 }
 
 .text-block h3 {
-  font-size: 20px;
+  font-size: 1.8vh;
   font-weight: 700;
 }
-.text-block {
+/* .text-block {
   bottom: 60px;
-}
+} */
 .text-block {
-  visibility: hidden!important;
+  /* visibility: hidden!important; */
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: linear;
   /* transition-delay: 0.5s; */
-  bottom: 30px;
+  /* bottom: 30px; */
   opacity: 1;
   visibility: visible;
 }
-/* ----------------------- */
+
+/* ----------------------------------------------- */
 .pagefooter{
+  margin-top: 10vh;
   background-color: black;
   font-family: 'Montserrat', sans-serif;
   font-size:2.0vh!important;
@@ -133,4 +171,16 @@ h1{
 }
 .copyright{
   margin-top: 10vh;
+}
+@media screen and (max-width: 600px) {
+  .item{
+    pointer-events: none!important;
+  }
+  /* .blockHead{
+    writing-mode: vertical-lr;
+    margin-top: 50vh!important;
+    margin-left: -40vh!important;
+    font-size: 1vh!important;
+   text-orientation: upright;
+  } */
 }
