--- a/White/public/stylesheet/about.css
+++ b/White/public/stylesheet/about.css
@@ -160,7 +160,9 @@ header{
 }
 
 .pagefooter{
-  background-color: black;
+  background-image: url('../images/footer.jpg');
+  background-size: cover;
+  background-position: center;
   font-family: 'Montserrat', sans-serif;
   font-size:2.0vh!important;
   color: white;
@@ -179,5 +181,8 @@ header{
   }
   .contMain0{
     height: 40vh!important;
+  }
+  .pagefooter{
+    font-size: 1.5vh!important;
   }
 }
