--- a/White/public/stylesheet/style.css
+++ b/White/public/stylesheet/style.css
@@ -65,11 +65,11 @@ a span{
   padding-right: 10vh;
   font-family: 'Righteous', cursive!important;
   font-size: 10vh!important;
-  background-color: #161616;
+  background-color:#a9c4ce;
   background-position: center;
   padding-left: 0vh!important;
   padding-right: 0vh!important;
-  color: white!important;
+  color: !important;
   height: 20vh!important;
   /* position: relative;
   top: 50%; */
@@ -79,7 +79,7 @@ a span{
   /* padding:5vh; */
   padding-top: 12vh;
 
-   background-image: linear-gradient(#161616, #FFFFFF)!important;
+   background-image: linear-gradient(#a9c4ce, #FFFFFF)!important;
   /* background-position: center; */
   /* background-attachment: fixed; */
   /* background: no-repeat; */
@@ -256,7 +256,9 @@ color:black;
 }
 
 .pagefooter{
-  background-color: black;
+  background-image: url('../images/footer.jpg');
+  background-size: cover;
+  background-position: center;
   font-family: 'Montserrat', sans-serif;
   font-size:2.0vh!important;
   color: white;
@@ -298,4 +300,8 @@ color:black;
   .wwdHead{
     margin-top: 25vh!important;
   }
+  .pagefooter{
+    font-size: 1.5vh!important;
+  }
+  
 }
