Clients added, marquee fixed

--- a/public/stylesheet/career.css
+++ b/public/stylesheet/career.css
@@ -8,6 +8,9 @@ body{
   color:white!important;
   font-family: 'Montserrat', sans-serif;
 }
+.navbar-toggler{
+  color:white!important;
+}
 a{
   color:#FFFFFF!important;
 }
