--- a/public/stylesheet/news.css
+++ b/public/stylesheet/news.css
@@ -28,6 +28,9 @@ a{
 a span{
   color:#FFFFFF !important;
 }
+.navbar-toggler{
+  color:white!important;
+}
 /* ---------------------------------- */
 
 /* ----------------------- */
