--- a/public/stylesheet/about.css
+++ b/public/stylesheet/about.css
@@ -173,6 +173,10 @@ header{
   /* margin-top: 10vh; */
 }
 
+.navbar-toggler{
+  color:white!important;
+}
+
 /* -------------media queries-------------- */
 
 @media screen and (max-width: 600px) {
