--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -289,7 +289,7 @@ color:black;
 .section2{
   margin-top:0;
   padding-bottom: 10vh;
-  background-color:#000!important;
+  background-color:#FFFFFF!important;
   /* background-attachment: fixed; */
 }
 
